--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             -->
             <img 
                 class="house-logo w-24 h-24 mb-4" 
-                src="https://placehold.co/96x96/B91C1C/FFFFFF?text=GND" 
+                src="https://raw.githubusercontent.com/JWinquiry/guysnextdoor/main/High%20Quality%20Logo.jpeg
                 alt="GuysNextDoor Logo" 
             >
             <h1 class="text-5xl sm:text-6xl font-extrabold font-['Bebas_Neue'] text-white tracking-wide">GUYSNEXTDOOR</h1>
